Fixed spacing for header items

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,9 +13,13 @@
 
   justify-content: flex-end;
   list-style: none;
-  gap: 1rem;
+
   padding: 1rem;
   color: gray;
+}
+
+.header li {
+  margin-left: 1rem;
 }
 
 .header *:hover {
